<resources>
    <string name="app_name">CharitableConnect</string>
    <string name="profile_nav_bar_string">Profile</string>
    <string name="explore_nav_bar_string">Explore</string>
    <string name="feed_nav_bar_string">Feed</string>
    <string name="hello_explore_fragment">Hello explore fragment</string>
    <string name="hello_feed_fragment">Hello feed fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="feed_fragment_title">Feed</string>
    <string name="explore_fragment_title">Explore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_event_fragment_title">New Event</string>
    <string name="TITLE">TITLE</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="image">Image</string>
    <string name="upload_new">UPLOAD NEW</string>
    <string name="description">Description</string>
    <string name="enable_rsvp">Enable RSVP?</string>
    <string name="add_other_organiser">ADD OTHER ORGANISER</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="skip_section">Skip ></string>
    <string name="continue_to_section">Continue ></string>
    <string name="rsvp_event">RSVP</string>
    <string name="CONTENT">CONTENT</string>
    <string name="SAVE">SAVE</string>
    <string name="no_date_selected">No date</string>
    <string name="no_time_selected">No time</string>
    <string name="hi">Hi!</string>
    <string name="register_intro">Let\'s set your feed up with a few questions</string>
    <string name="add">+</string>
    <string name="title_activity_date_time">DateTimeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register_title">Register</string>
    <string name="new_user">New user?</string>
    <string name="sign_up_exclaim">Sign up!</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_user">Existing user?</string>

    <string name="is_user_organiser_q">Are you an event organiser?</string>
    <string name="user_is_organiser">YES, I AM AN EVENT ORGANISER</string>
    <string name="user_is_not_organiser">NO, I AM AN EVENT ATTENDEE</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_info">Would you like to receive notifications for events that may interest you?</string>
    <string name="yes_button">YES PLEASE</string>
    <string name="no_button">NO THANKS</string>
    <string name="welcome_complete_title">All set!</string>
    <string name="welcome_complete_button">LET\'S START BROWSING</string>
    <string name="event_types_title">Event Types</string>
    <string name="event_types_info">What kind of events are you interested in?</string>
    <string name="address1_hint">Line 1 of the event\'s address</string>
    <string name="address_1_title">Address Line 1</string>
    <string name="postcode_hint">Postcode of the event\'s address</string>
    <string name="postcode_title">Postcode</string>
    <string name="my_posts_content_description">My posts</string>
    <string name="upcoming_events_content_description">Upcoming Events</string>
    <string name="events_in_feed_content_description">Events in Feed</string>
    <string name="feed_title">Feed</string>
    <string name="new_event_content_description">Create a new event</string>
    <string name="feed_scroll_content_description">Scroll to see events</string>
    <string name="category_climate">Climate</string>
    <string name="category_local_business">Local Business</string>
    <string name="category_community">Community</string>
    <string name="category_sports">Sports</string>
    <string-array name="categories">
        <item>Other</item>
        <item>@string/category_climate</item>
        <item>@string/category_local_business</item>
        <item>@string/category_sports</item>
        <item>@string/category_community</item>
    </string-array>
</resources>